<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_vertical">
    
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="@string/name" />

        <EditText
            android:singleLine="true"
            android:hint="@string/textinfo5"
            android:textSize="16sp"          
            android:id="@+id/Register_Username"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="#0e000000"
            android:maxLength="16"
            android:gravity="center_vertical"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="@string/password" />

        <EditText
            android:singleLine="true"
           	android:hint="@string/textinfo4"
           	android:textSize="16sp"
            android:id="@+id/Register_Pass"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="#0e000000"
            android:maxLength="12"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:ems="10" />

    </LinearLayout>
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="@string/password2" />

        <EditText
            android:singleLine="true"
            android:hint="@string/textinfo3"
            android:textSize="16sp"          
            android:id="@+id/Register_Pass2"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="#0e000000"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="12"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="@string/phone" />

        <EditText
            android:singleLine="true"
            android:hint="@string/textinfo6"
            android:textSize="16sp"          
            android:id="@+id/Register_Mobile"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="#0e000000"
            android:gravity="center_vertical"
            android:maxLength="11"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp" 
        android:gravity="center">

          <Button
            android:id="@+id/BtnBackLogin"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:text="@string/back"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

      
        <Button
            android:id="@+id/BtnRegisterConfirm"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:text="@string/register2"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

    </LinearLayout>
    

</LinearLayout>
    

</LinearLayout>
