<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outinfo"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textshow"
        android:singleLine="false"
        android:scrollbars="vertical"
        android:textSize="18sp"
       	android:layout_marginLeft="20dp"
       	android:layout_marginRight="20dp"
       	android:layout_height="330dp" 
        android:layout_width="fill_parent"
        android:textColor="#000000"
        android:background="@android:color/transparent"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/BtnOut1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#c0c0c0"
        android:layout_marginTop="30dp"
       	android:layout_marginLeft="20dp"
       	android:layout_marginRight="20dp"
        android:text="@string/out1" />

    <Button
        android:id="@+id/BtnOut2"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#c0c0c0"
        android:layout_marginLeft="20dp"
       	android:layout_marginRight="20dp"
        android:text="@string/out2" />
    
</LinearLayout>
