<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    
	<TextView 
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:singleLine="true" 
        android:text="@string/time_start" 
        android:textColor="#FFFFFF" 
        android:textSize="16sp" />

	<EditText
	    android:hint="@string/pp1"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:id="@+id/et_start_time"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" >

	    <requestFocus />
	</EditText>
   
    <TextView 
        
        android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:singleLine="true" 
        android:text="@string/time_end" 
        android:textColor="#FFFFFF" 
        android:textSize="16sp" /> 
   
	<EditText
	    android:hint="@string/pp1"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:id="@+id/et_end_time"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" >

	    <requestFocus />
	</EditText>     

    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="bottom">


          <Button
            android:id="@+id/BtnBackTimepick"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/before"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

      
        <Button
            android:id="@+id/BtnNextTimepick"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

    </LinearLayout>
    

</LinearLayout>
