<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="app.forandroid.travelfinder.MainActivity" >
    
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="@string/name" />

        <EditText
            android:hint="@string/textinfo1"
            android:textSize="16sp"
            android:singleLine="true"          
            android:id="@+id/Login_Username"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="#0e000000"
            android:maxLength="16"
            android:gravity="center_vertical"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:text="@string/password" />

        <EditText
            
           	android:hint="@string/textinfo2"
           	android:textSize="16sp"
            android:id="@+id/Login_Pass"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="#0e000000"
            android:singleLine="true"
            android:maxLength="12"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:ems="10" />

    </LinearLayout>

   <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp" 
        android:gravity="center">

          <Button
            android:id="@+id/BtnLogin"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:text="@string/login"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

      
        <Button
            android:id="@+id/BtnRegister"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:text="@string/register"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

    </LinearLayout>
    

</LinearLayout>
