<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:text="@string/cityinfo" />

	<GridView android:id="@+id/gridview_check"
		android:layout_width="fill_parent"
		android:layout_height="350dp"
		android:numColumns="2"
		android:layout_margin="10dp"
		android:horizontalSpacing="10dp"
		android:verticalSpacing="10dp"
		android:gravity="center"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom">

          <Button
            android:id="@+id/BtnBackPlacepick"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/before"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

      
        <Button
            android:id="@+id/BtnNextPlacepick"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:background="@drawable/shape"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="18sp" />

    </LinearLayout>
    
    
</LinearLayout>
